--- a/spin-router-middleware/Cargo.toml
+++ b/spin-router-middleware/Cargo.toml
@@ -3,6 +3,10 @@ name = "spin-router-middleware"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+async-trait = "0.1.77"
+spin-sdk = "2"
+task-local-extensions = "0.1.4"
+
+[dev-dependencies]
+tokio-test = "*"
