--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["spin-router-middleware"]
+members = ["spin-cors-router-middleware", "spin-router-middleware"]
